--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "clsx": "^2.1.1",
     "lucide-react": "^0.453.0",
     "next": "14.2.15",
+    "pg": "^8.13.0",
+    "pg-pool": "^3.7.0",
     "react": "^18",
     "react-dom": "^18",
     "tailwind-merge": "^2.5.4",
